--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <img src="img /IMG_9284.jpg" alt="Snow" style="width:100%">
   </div>
   <div class="column">
-    <img src="Iimg /IMG_9279.jpg" alt="Snow" style="width:100%">
+    <img src="img /IMG_9279.jpg" alt="Snow" style="width:100%">
   </div>
 </div>
 <figcaption> Yahya Abdul-Basser attends mosque at New York University Muslium Center. </figcaption>
