--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
  <div class="row">
   <div class="column">
-    <img src="img /8C586A3D-DEC4-42DA-ADEE-DD8682A614F0_1_105_c 2.jpg" alt="Snow" style="width:100%">
+    <img src= "img /IMG_9397.JPG" alt="Snow" style="width:100%">
     <figcaption> Methulia Medage kneeling to the head presit at New York Buddhist Vihara in Queens Village, NY. </figcaption>
   </div>
   
@@ -164,7 +164,8 @@
   <div class="column">
     <img src="img /IMG_9284.jpg" alt="Snow" style="width:100%">
   </div>
-</div>
+  </div>
+  
 <figcaption> Yahya Abdul-Basser attends mosque at New York University Muslium Center. </figcaption>
 
 <p>Williams, the former pastor turned atheist, disagrees with Abdul-Basser. He says that the idea that someone has a divine purpose is all made up. “I don't think that anyone has a purpose,” he says. “You can find joy and enrichment in lots of things in life without having to call it a purpose.”
@@ -177,7 +178,6 @@
   <div class="column">
     <img src="img /IMG_9487.JPG" alt="Snow" style="width:100%">
     <figcaption> Zach Williams plays with Bluegrass music group at Sunnys Bar in Red Hook, Brooklyn every Saturday night. </figcaption>
-
   </div>
 </div>
 
