--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
  <div class="row">
   <div class="column">
     <img src= "img /IMG_9397.JPG" alt="Snow" style="width:100%">
-    <figcaption> Methulia Medage kneeling to the head presit at New York Buddhist Vihara in Queens Village, NY. </figcaption>
+    <figcaption>  Methulia Medage  attends New York Buddhist Vihara in Queens Village, NYC. </figcaption>
   </div>
   
 </div>
@@ -142,11 +142,10 @@
   </div>
   
 </div>
-<figcaption> Alexander Ocasio prays wuth his roasy beads at New York University Catholic Center where he attend mass every Friday. </figcaption>
+<figcaption> Alexander Ocasio prays with his roasy beads at New York University Catholic Center where he attend mass every Friday. </figcaption>
 
 
 
-<p>He wants to encourage other young people to embrace religious faith by becoming a Catholic high school teacher. But his parents are unsure about his decisions. "Even though they themselves are Catholic, they think that being devout is like some result of brainwashing,” Ocasio says. “But ironically enough, my high school wasn't that devout in the first place. So that's why I want to be a religion teacher. I feel like it needs that devotion, so it needs someone to bring that devotion back."
 </p>
 
 <p>Even with many of his peers leaving traditional religion and having parents who are not always in agreement with his religious views, Ocasio insists on forming his own opinions. "I don't think what other people do or say affects [my religion],” he insists. “Even if 99% of the world doesn't believe in gravity, it doesn't change the fact that gravity exists. Catholicism is true; it doesn't change based on if other people believe it is or not." 
