--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </div>
   
 </div>
-<figcaption> Alexander Ocasio prays with his roasy beads at New York University Catholic Center where he attend mass every Friday. </figcaption>
+<figcaption> Alexander Ocasio prays with his rosary beads at New York University Catholic Center where he attend mass every Friday. </figcaption>
 
 
 
