--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   </div>
   </div>
   
-<figcaption> Yahya Abdul-Basser attends mosque at New York University Muslium Center. </figcaption>
+<figcaption> Yahya Abdul-Basser doing his daily prayer at New York University Muslim Center. </figcaption>
 
 <p>Williams, the former pastor turned atheist, disagrees with Abdul-Basser. He says that the idea that someone has a divine purpose is all made up. “I don't think that anyone has a purpose,” he says. “You can find joy and enrichment in lots of things in life without having to call it a purpose.”
 </p>
@@ -176,7 +176,7 @@
 <div class="row">
   <div class="column">
     <img src="img /IMG_9487.JPG" alt="Snow" style="width:100%">
-    <figcaption> Zach Williams plays with Bluegrass music group at Sunnys Bar in Red Hook, Brooklyn every Saturday night. </figcaption>
+    <figcaption> Zach Williams plays with Bluegrass music group at Sunny's Bar in Red Hook, Brooklyn every Saturday night. </figcaption>
   </div>
 </div>
 
