--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
 
 
 <p>Developed by <a href="https://www.brianaellisgibbs.com/"> Briana Ellis-Gibbs </a></p>
-
-
+<p> Thank you to my advsior Linda Villarosa </p>
 </body>
 
 </div>
