--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 <div class="row">
   <div class="column">
-    <img src="img /IMG_9487.JPG" alt="Snow" style="width:100%">
+    <img src="img /ADC38363-30DF-4156-868E-AC017394F0E9.jpeg" alt="Snow" style="width:100%">
     <figcaption> Zach Williams plays with Bluegrass music group at Sunny's Bar in Red Hook, Brooklyn every Saturday night. </figcaption>
   </div>
 </div>
